packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unknown_in_heading_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 17,
      "end": 27
    },
    "severity": "error",
    "message": "unknown variable: notdefined",
    "hints": [
      "if you meant to display multiple letters as is, try adding spaces between each letter: `n o t d e f i n e d`",
      "or if you meant to display this as text, try placing it in quotes: `\"notdefined\"`"
    ]
  }
]
