packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unknown_in_list_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 12,
    "width": 64.56,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      37,
      44
    ],
    "items": 12,
    "width": 45.81,
    "height": 12.27,
    "x": 18.35,
    "y": 44.53
  }
]
