packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unknown_multiline_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      41
    ],
    "items": 6,
    "width": 223.24,
    "height": 16.38,
    "x": -111.4,
    "y": 40.32
  },
  {
    "range": [
      43,
      49
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 75.9
  }
]
