packages/wasm/src/tests/snapshots/wasm__tests__partition__clean_dollar_in_comment_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      83,
      103
    ],
    "items": 4,
    "width": 82.96,
    "height": 67.36,
    "x": 0.0,
    "y": 0.0
  }
]
