packages/wasm/src/tests/snapshots/wasm__tests__partition__clean_equation_at_eof_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      40
    ],
    "items": 11,
    "width": 75.28,
    "height": 182.96,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      42,
      49
    ],
    "items": 5,
    "width": 14.5,
    "height": 15.1,
    "x": -7.77,
    "y": 202.16
  }
]
