packages/wasm/src/tests/snapshots/wasm__tests__partition__clean_equation_at_start_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      27
    ],
    "items": 11,
    "width": 92.56,
    "height": 85.71,
    "x": 0.0,
    "y": -0.35
  },
  {
    "range": [
      29,
      65
    ],
    "items": 10,
    "width": 84.88,
    "height": 136.72,
    "x": 0.0,
    "y": 104.56
  }
]
